<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:text="@string/table_label"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_weight="2"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_weight="2"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell2"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell3"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell4"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell5"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell6"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_weight=".33"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell7"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_weight=".33"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell8"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_height="50dp"
                android:layout_column="2"
                android:layout_weight=".9"
                android:background="@drawable/text_corners"
                android:gravity="center"
                android:text="@string/cell9"
                android:textColor="@android:color/black" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>