<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099CB">

    <com.imankur.analogclockview.AnalogClock
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        app:showSecondHand="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:text="@string/myClock_label"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="200dp"
        android:padding="17dp"
        android:text="@string/clock_label"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="185dp"
        android:background="@drawable/rounded_corners2"
        android:contentDescription="@string/desc_opacity" />

</FrameLayout>